--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
@@ -205,7 +205,7 @@
 
 .video-sidebar{
 	position: absolute;
-	left: -265px;
+	left: -247px;
 	z-index: 1;
 	top: 150px;
 	.transition-duration(0.3s);
